@@ -133,6 +133,7 @@ namespace Utils
     extern QPainterPath buildPath(const QRectF &r, double radius);
     extern QColor clampColor(const QColor &col);
     extern QColor monoIconColor();
+    extern int compare(const QString &a, const QString &b);
 }
 
 #endif
